--- a/engine/db.cfg
+++ b/engine/db.cfg
@@ -1,6 +1,6 @@
 [Database Details]
 db_name: mydatabase
-hostname: 172.30.216.99
-ip_address: 172.30.216.99
+hostname: localhost
+ip_address: 127.0.0.1
 user: myuser
 password:mypassword
