--- a/db.cfg
+++ b/db.cfg
@@ -1,6 +1,5 @@
 [Database Details]
-db_name: openshift
-hostname: localhost
-ip_address: 127.0.0.1
-user: root
-password: 
+db_name: mydatabase
+hostname: 10.1.12.9
+user: myuser
+password: mypassword
