--- a/engine/db.cfg
+++ b/engine/db.cfg
@@ -1,6 +1,5 @@
 [Database Details]
 db_name: mydatabase
-hostname: localhost
-ip_address: 127.0.0.1
+hostname: 10.1.12.9
 user: myuser
-password:mypassword
+password: mypassword
