--- a/db.cfg
+++ b/db.cfg
@@ -1,5 +1,5 @@
 [Database Details]
-db_name: mydatabase
-hostname: mysql
-user: myuser
-password:mypassword
+db_name: openshift
+hostname: mysql1
+user: root
+password:
